--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Meme Share</string>
+    <string name="text_label_1">Home</string>
+    <string name="text_label_2">Share</string>
+    <string name="text_label_3">Settings</string>
 </resources>
